--- a/journey/index.html
+++ b/journey/index.html
@@ -86,7 +86,7 @@
             <polygon fill="#2281f2" points="131.49 96.92 104.09 82.03 104.1 96.21 131.5 112.11 131.49 96.92" />
           </g>
         </svg>
-        <h1 class="animate d2">GraphScope's Journey on <br />
+        <h1 id='start-point' class="animate d2">GraphScope's Journey on <br />
           Graph Processing</h1>
       </div>
     </div>
