--- a/journey/cn/index.html
+++ b/journey/cn/index.html
@@ -87,7 +87,7 @@
             <polygon fill="#2281f2" points="131.49 96.92 104.09 82.03 104.1 96.21 131.5 112.11 131.49 96.92" />
           </g>
         </svg>
-        <h1 class="animate d1">GraphScope <br />图计算之旅</h1>
+        <h1 id='start-point' class="animate d1">GraphScope <br />图计算之旅</h1>
       </div>
     </div>
   </section>
